--- a/src/app/features/quote/quote.component.html
+++ b/src/app/features/quote/quote.component.html
@@ -52,7 +52,7 @@
     <h3>Random quote</h3>
     <button
       mat-button
-      color="primary"
+      color="warn"
       [disabled]="!(randomQuote$ | async)"
       (click)="updateRandomQuote()"
     >
