--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,11 @@ section.content-wrapper {
   row-gap: 1rem;
   place-items: center;
 }
+
+.mb3 {
+  margin-bottom: 1rem;
+}
+
+.mt3 {
+  margin-top: 1rem;
+}
