--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,17 @@ section.content-wrapper {
 .mt3 {
   margin-top: 1rem;
 }
+
+*::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+*::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+*::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #3f51b5;
+}
