--- a/src/app/features/notfound/notfound.component.scss
+++ b/src/app/features/notfound/notfound.component.scss
@@ -1,8 +1,8 @@
+@use "../../styles/mixins" as *;
+
 div {
   width: 100%;
   height: 100%;
   min-height: calc(100vh - 165px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex;
 }
