--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,11 +17,15 @@ section.content-wrapper {
   place-items: center;
 }
 
-.mb3 {
+.m-0 {
+  margin: 0;
+}
+
+.mb-3 {
   margin-bottom: 1rem;
 }
 
-.mt3 {
+.mt-3 {
   margin-top: 1rem;
 }
 
